Basic version of header.

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,5 +3,19 @@
 
 // Include any default variable overrides here (though functions won't be available)
 @import "../node_modules/bootstrap/scss/bootstrap";
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 // Then add additional custom code here
+:root {
+    --primary-color-dark: #1b1b1b;
+    --primary-color-light: #e0e0e0;
+}
+
+body {
+    font-family: 'Noto Sans', sans-serif;
+    color: var(--primary-color-dark);
+}
+
+header {
+    color: var(--primary-color-light);
+    z-index: 2;
+}
