--- a/public/main.css
+++ b/public/main.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11857,6 +11858,20 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+:root {
+  --primary-color-dark: #1b1b1b;
+  --primary-color-light: #e0e0e0;
+}
+
+body {
+  font-family: "Noto Sans", sans-serif;
+  color: var(--primary-color-dark);
+}
+
+header {
+  color: var(--primary-color-light);
+  z-index: 2;
 }
 
 /*# sourceMappingURL=main.css.map */
