--- a/src/main.scss
+++ b/src/main.scss
@@ -120,3 +120,23 @@ body {
 .navigation__link:hover {
     color: var(--active__color);
 }
+
+.programs {
+    height: 100vh;
+}
+
+.programs__photo {
+    width: 360px;
+    height: 640px;
+}
+
+.card__description {
+    align-self: center;
+    &--right {
+        text-align:right;
+    }
+}
+
+.reverse {
+    flex-direction: row-reverse;
+}
